--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "description": "A small bootstrapped, single-page, Javascript framework to start you up!",
   "dependencies": {
+    "grunt": "~0.3.12",
     "grunt-less": "~0.1.5",
     "grunt-recess": "~0.1.0",
     "grunt-requirejs": "~0.2.9",
