--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "description": "A small bootstrapped, single-page, Javascript framework to start you up!",
     "dependencies": {
         "grunt": "0.3.x",
-        "grunt-contrib-less": ">0.0.0",
+        "grunt-contrib-less": "0.3.x",
         "grunt-recess": "~0.1.0",
         "grunt-requirejs": "~0.2.9",
         "grunt-shell": "~0.1.2",
